# Poseidon-s-Trident

./: .dockerignore  .semgrep.yaml  LICENSE  Makefile  README.md  UI.py  config_manager.py  firewall.py  logger.py  logging_config.yaml  main.tf  provider.tf  pyproject.toml  requirements.txt  test_firewall.py  threat_detection_advanced.py  variables.tf
.github/: FUNDING.yml
.github/workflows/: black-format.yml  ci.yml  greetings.yml
assets/logos/: README.md
tests/: .pre-commit-config.yaml  Dockeer-compase.yml  test_config_manager.py  test_encryption.py  test_firewall.py  test_firewall_integration.py  test_redaction.py  test_threat_detection.py
tests/tests/: test_guardduty.py
tests/workflows/: Docker-Compose.yml
